<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.DymaGramLoginActivity">

    <ImageView
        android:id="@+id/login_icon_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/dymagram_logo"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/dymagram_app_logo"/>

    <TextView
        android:id="@+id/login_app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@+id/login_icon_image_view"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="cursive"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="100dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/orange"
        app:cursorColor="@color/orange"
        app:hintTextColor="@color/orange"
        app:boxStrokeWidthFocused="3dp"
        app:boxStrokeWidth="1dp"
        android:layout_below="@+id/login_app_name_text_view"
        android:hint="@string/login_page_login_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:ellipsize="end"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_below="@+id/login_text_input_layout"
        app:boxStrokeColor="@color/orange"
        app:cursorColor="@color/orange"
        app:hintTextColor="@color/orange"
        app:boxStrokeWidthFocused="3dp"
        app:boxStrokeWidth="1dp"
        android:hint="@string/login_page_password_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:ellipsize="end"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/login_page_login_button"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        android:layout_above="@+id/sign_up_text_view"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/boutton_pour_se_connecter"/>

    <TextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_sign_up_text"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"/>


</RelativeLayout>